@@ -4,8 +4,9 @@ wreport (1.8-1) unstable; urgency=low
      - Initial support for C04yyy modifiers
      - More detailed repetition operator notifications to DDS interpreters
      - Added a way to export low-level details about decoded BUFR messages
+     - Support master table numbers
 
- -- Enrico Zini <enrico@debian.org>  Mon, 30 May 2011 18:43:12 +0200
+ -- Enrico Zini <enrico@debian.org>  Mon, 30 May 2011 23:45:19 +0200
 
 wreport (1.7-1) unstable; urgency=low
 
